infraestructure/k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comments-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: bujosa/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service   
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-external-service
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
