infraestructure/k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: posts-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: bujosa/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service   
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-external-service
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
