infraestructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/images.class: nginx
    ngnix.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com 
      http:
        paths:
          - path: /posts-create
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:  
                  number: 4000
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-service
                port:  
                  number: 4001
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:  
                  number: 4002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:  
                  number: 3000
